# gadgetron_Bartholomew

./: CMakeLists.txt  README.md  demo.cpp
python/: CMakeLists.txt  IsmrmredImageArray_cine_auto_contouring.py  cine_auto_contouring.py  segmentation_settings.py  segmentation_tools.py
